# blog-django-s

./: .gitignore  pyproject.toml
blog/: __init__.py
blog/apps/article/: filters.py  models.py  routers.py  serializers.py  views.py
blog/apps/book/: models.py  routers.py  serializers.py  views.py
blog/apps/user/: managers.py  models.py  routers.py  serializers.py  views.py
blog/blog/: conf.py  settings.py  urls.py
blog/utils/: pagination.py  permissions.py  swagger.py
